// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default use 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown__trigger"
    >
      Trigger
      <svg
        class="dropdown__trigger-icon"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10 5a2 2 0 1 0 4 0 2 2 0 0 0-4 0Zm2 9a2 2 0 1 1 0-4 2 2 0 0 1 0 4Zm0 7a2 2 0 1 1 0-4 2 2 0 0 1 0 4Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default use 2`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown__trigger"
    >
      Trigger
      <svg
        class="dropdown__trigger-icon dropdown__trigger-icon_active-dots"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M10 5a2 2 0 1 0 4 0 2 2 0 0 0-4 0Zm2 9a2 2 0 1 1 0-4 2 2 0 0 1 0 4Zm0 7a2 2 0 1 1 0-4 2 2 0 0 1 0 4Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="dropdown__content"
      style="position: fixed; top: 0px; left: 0px; min-width: 0;"
    >
      <div>
        Option 1
      </div>
      <div>
        Option 2
      </div>
      <div>
        Option 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default use 3`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown__trigger"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M16.293 9.293 13 12.586V2h-2v10.586L7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707-1.414-1.414ZM22 20v-4h-2v4H4v-4H2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2Z"
          fill-rule="evenodd"
        />
      </svg>
      Trigger
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.586 12 7.293 4.707l1.414-1.414L17.414 12l-8.707 8.707-1.414-1.414L14.586 12Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default use 4`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown__trigger"
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M16.293 9.293 13 12.586V2h-2v10.586L7.707 9.293l-1.414 1.414L12 16.414l5.707-5.707-1.414-1.414ZM22 20v-4h-2v4H4v-4H2v4a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2Z"
          fill-rule="evenodd"
        />
      </svg>
      Trigger
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.586 12 7.293 4.707l1.414-1.414L17.414 12l-8.707 8.707-1.414-1.414L14.586 12Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="dropdown__content"
      style="position: fixed; top: 0px; left: 0px; min-width: 0;"
    >
      <div>
        Option 1
      </div>
      <div>
        Option 2
      </div>
      <div>
        Option 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default use icon dots 1`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown__trigger"
    >
      Trigger
      <svg
        class="dropdown__trigger-icon dropdown__trigger-icon_chevron"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Default use icon dots 2`] = `
<DocumentFragment>
  <div
    class="dropdown"
  >
    <div
      class="dropdown__trigger"
    >
      Trigger
      <svg
        class="dropdown__trigger-icon dropdown__trigger-icon_chevron dropdown__trigger-icon_active-chevron"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="m19.293 7.293 1.414 1.414L12 17.414 3.293 8.707l1.414-1.414L12 14.586l7.293-7.293Z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <div
      class="dropdown__content"
      style="position: fixed; top: 0px; left: 0px; min-width: 0;"
    >
      <div>
        Option 1
      </div>
      <div>
        Option 2
      </div>
      <div>
        Option 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;
